# jepa-drake-arm

./: README.md  pyproject.toml
scripts/: ac_energy.py  ac_mpc.py  reward_signal.py  run_experiment.py  side_by_side.py  smoke_model.py  smoke_sim.py  unsupervised_perception.py
src/jepa_drake_arm/: ac.py  embedder.py  evaluate.py  motions.py  reward.py  sim.py  unsupervised.py  visualize.py
